# NaijaStore-API

./: .env  alembic.ini  backend.dockerfile  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml  prestart.sh  pyproject.toml
app/: backend_pre_start.py  initial_data.py  main.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: login.py  review_products.py  users.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_product.py  crud_review_product.py  crud_user.py
app/db/: base.py  initdb.py  session.py
app/models/: __init__.py  comment.py  product.py  review.py  review_product.py  user.py
app/schemas/: __init__.py  comment.py  product.py  review.py  review_product.py  user.py
