[tool.poetry]
name = "reviewBackend"
version = "0.1.0"
description = ""
authors = ["Prosper Ogbonnaya <ogbonnayaprosper1@gmail.com>"]


[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.88.0"
psycopg2 = "^2.8.6"
pydantic = "^1.10.2"
emails = "^0.6"
sqlalchemy = "^1.3.22"
requests = "^2.25.0"
tenacity = "^6.1.0"
email-validator = "^1.0.5"
redis = "^4.3.5"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
alembic = "^1.4.2"
uvicorn = "^0.20.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.1.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.1.0"
pylint = "^2.6.0"
sqlalchemy-stubs = "^0.4"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

